# travel-agent

./: .gitignore  README.md  app.py  main.py  pyproject.toml  utils.py
travel_agent/: agent_config.json  agent_setup.py  input_guardrails.py
travel_agent/prompts/: activities_agent.txt  cost_of_living_agent.txt  flight_agent.txt  hotel_agent.txt  manager_agent.txt
travel_agent/tools/: tool_definition.py  tool_mapping.py  utils.py
