[project]
name = "travel-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Pietro Melzi",email = "pietromelzi95@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai-agents (>=0.6.5,<0.7.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
